Fixed map page sizing issue on mobile.

--- a/WebContent/css/main.css
+++ b/WebContent/css/main.css
@@ -6,6 +6,7 @@
 @media only screen and (max-device-width : 1024px) {
 	body {
   	  background: url(../img/clouds-bg.jpg);
+      width: 800px;
 	}
 }
 
