--- a/WebContent/css/map.css
+++ b/WebContent/css/map.css
@@ -1,5 +1,17 @@
+ /* Mobile devices */
+@media only screen and (max-device-width : 1024px) {
+	#titlebanner {
+	    width: 600px;
+	}
+
+	body {
+	    width: 600px;
+	    height: 2000px;
+	    overflow: hidden;
+	}
+}
+
 body {
-      width: auto;
       margin: 0px;
       overflow: hidden;
 }
@@ -36,7 +48,7 @@ td.numeric {
 #map {
     position: absolute;
     top: 80px;
-    bottom: 0px; /* height of #footer */
+    bottom: 0px;
     width: 100%;
     border-top: 1px solid black;
 }
